Update to htaccess reflecting move of infocentral and merlot under one vhost.

--- a/src/public/.htaccess
+++ b/src/public/.htaccess
@@ -1,8 +1,9 @@
 <IfModule mod_rewrite.c>
     RewriteEngine On
-    RewriteBase /
+    RewriteBase /service
     RewriteRule ^index\.php$ - [L]
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule . /index.php [L]
+    RewriteCond %{REQUEST_FILENAME} !-l
+    RewriteRule . /service/index.php [L]
 </IfModule>
