--- a/src/public/.htaccess
+++ b/src/public/.htaccess
@@ -1,9 +1,9 @@
 <IfModule mod_rewrite.c>
     RewriteEngine On
-    RewriteBase /service
+    RewriteBase /ic
     RewriteRule ^index\.php$ - [L]
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-l
-    RewriteRule . /service/index.php [L]
+    RewriteRule . /ic/index.php [L]
 </IfModule>
